# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\Auth\LoginController;
 use App\Http\Controllers\Api\Auth\LogoutController;
+use App\Http\Controllers\Api\BrandController;
 use App\Http\Controllers\Api\CategoryController;
 use App\Http\Middleware\JwtMiddleware;
 use Illuminate\Support\Facades\Route;
@@ -14,5 +15,6 @@ Route::prefix('v1')->group(function () {
 
     Route::middleware(JwtMiddleware::class)->group(function () {
         Route::apiResource('categories', CategoryController::class);
+        Route::apiResource('brands', BrandController::class);
     });
 });
