# storage/api-docs/api-docs.json
@@ -73,6 +73,52 @@
                 ]
             }
         },
+        "/api/v1/brands": {
+            "post": {
+                "tags": [
+                    "Brand"
+                ],
+                "summary": "Display brands list",
+                "operationId": "listBrands",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "limit": {
+                                        "description": "Page limit",
+                                        "type": "string"
+                                    },
+                                    "page": {
+                                        "description": "Page number",
+                                        "type": "string"
+                                    },
+                                    "sortBy": {
+                                        "description": "Sort by",
+                                        "type": "string"
+                                    },
+                                    "sort": {
+                                        "description": "Sort type",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful response"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/api/v1/categories": {
             "post": {
                 "tags": [
